[package]
name = "mapprr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.19"
csv = "1"
egui = "0.20"
nalgebra = "0.32.1"
yaml-rust = "0.4.5"

[dev-dependencies]
assert_approx_eq = "1"

[[bin]]
name = "mapprr"
path = "src/bin/mapprr.rs"
